# crosshot-ai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TEST_WORKFLOW.md  docker-compose.monitoring.yml  docker-compose.watchtower.yml  docker-compose.x.yml  docker-compose.xhs.yml  docker-compose.yml  migrate_knowledge.sql  migrate_users.sql  pyproject.toml
.claude/: settings.local.json
apps/: config.py
apps/agent-analyst/: Dockerfile  pyproject.toml
apps/agent-analyst/agent_analyst/: __main__.py  executor.py  pipeline.py  prompts.py
apps/agent-analyst/agent_analyst/skills/: gap_analysis.md  integrate.md  memory.md  summarize.md  triage.md
apps/agent-analyst/agent_analyst/tools/: alert_tool.py  dispatch_tool.py  gap_tool.py  integrate_tool.py  notes_tool.py  overview_tool.py  pipeline.py  progress.py  query.py  snapshot_tool.py  summary.py  topic.py  triage_tool.py
apps/agent-coordinator/: Dockerfile  pyproject.toml
apps/agent-coordinator/agent_coordinator/: __init__.py  __main__.py
apps/agent-coordinator/agent_coordinator/tools/: __init__.py  cookies.py  plan.py  query.py
apps/agent-crawler/: Dockerfile  pyproject.toml
apps/agent-crawler/agent_crawler/: __init__.py  __main__.py  executor.py
apps/agent-crawler/agent_crawler/services/: media_downloader.py
apps/agent-crawler/agent_crawler/stealth/: __init__.py  injection.py  profiles.py
apps/agent-crawler/agent_crawler/tools/: __init__.py  save.py  scrape.py
apps/agent-searcher/: Dockerfile  pyproject.toml
apps/agent-searcher/agent_searcher/: __main__.py  tools.py
apps/api/: Dockerfile  agents.py  main.py  pyproject.toml  stats.py
apps/api/api/: __init__.py  __main__.py  deps.py  main.py  reindex.py  scheduler.py
apps/api/api/routers/: agents.py  alerts.py  cookies.py  dashboard.py  health.py  jobs.py  periods.py  tasks.py  topics.py  users.py
apps/crawler/: Dockerfile  README.md  __init__.py  __main__.py  base.py  image_downloader.py  media_downloader.py  pyproject.toml  registry.py
apps/crawler/tasks/: scheduler.py
apps/crawler/x/: __init__.py  scraper.py
apps/crawler/xhs/: __init__.py  scraper.py
apps/shared/: MIGRATION_GUIDE.md  MIGRATION_RUNBOOK.md  QUICK_START.md  TEMPORAL_SCHEMA.md  alembic.ini  pyproject.toml
apps/shared/alembic/: env.py
apps/shared/alembic/versions/: 20260301_0100_create_temporal_tables.py  20260301_0200_alter_existing_tables.py  20260301_0300_create_views_and_functions.py
apps/shared/scripts/: backfill_analysis.py  migrate_period_zero.py
apps/shared/shared/: __init__.py  search.py
apps/shared/shared/agent/: __init__.py  base.py
apps/shared/shared/config/: __init__.py  agents.yaml  settings.py
apps/shared/shared/db/: __init__.py  engine.py  models.py
apps/shared/shared/models/: __init__.py  agent.py  content.py  cookies.py  task.py
apps/shared/shared/queue/: __init__.py  redis_queue.py
apps/shared/shared/services/: cookies_service.py
apps/shared/shared/skills/: __init__.py  loader.py  models.py
apps/shared/shared/tools/: __init__.py  base.py
docs/: ARCHITECTURE.md  AUTO_UPDATE_SOLUTIONS.md  MONITORING.md
monitoring/: grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  promtail-config.yaml
scripts/: auto-update.sh  check_comment_sort.py  check_note_fields.py  compose-helper.sh  debug_comments.py  debug_comments2.py  debug_user_id.py  explore_user_final.py  explore_user_notes.py  explore_user_page3.py  explore_user_page4.py  extract_note.py  find_poll.py  find_poll2.py  find_poll3.py  find_vote_structure.py  intercept_api.py  seed_db.py  test_click_filter.py  test_comment_api.py  test_comment_scroll.py  test_comment_scroll2.py  test_comments.py  test_comments2.py  test_comments_final.py  test_comprehensive.py  test_crawler_full.py  test_db_and_images.py  test_expand_sub.py  test_explore_filters.py  test_filter_final.py  test_filter_menu.py  test_filter_network.py  test_filter_options.py  test_filter_popup.py  (+17 more)
(+96 files in other folders)
