[project]
name = "crosshot-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "fake-useragent>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.9.0",
    "yt-dlp>=2024.0.0",
]
