[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-analyst"
version = "0.1.0"
description = "Analyst agent — AI-driven topic planning and data analysis"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "openai>=2.17.0",
]

[tool.uv.sources]
shared = { workspace = true }
