[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-coordinator"
version = "0.1.0"
description = "Coordinator agent — AI-driven task planning and analysis"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "openai>=2.17.0",
]

[tool.uv.sources]
shared = { workspace = true }
