[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-crawler"
version = "0.1.0"
description = "Crawler agent — executes web scraping tasks using Playwright"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "playwright>=1.58.0",
]

[tool.uv.sources]
shared = { workspace = true }
