[project]
name = "crawler"
version = "0.1.0"
description = "Web crawler service"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.58.0",
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
